version/0.13/_sources/api/solver/_autosummary/settings/heat_of_pyrolysis.rst.txt
:orphan:

.. _heat_of_pyrolysis:

heat_of_pyrolysis
=================

.. autoclass:: ansys.fluent.core.solver.settings_231.heat_of_pyrolysis.heat_of_pyrolysis

.. rubric:: Attributes

========================   ====================================================

Attribute                                                               Summary

========================   ====================================================
:ref:`option <option_9>`       Select method for calculating material property.

:ref:`value <value>`                                             'value' child.

========================   ====================================================

.. rubric:: Included in:

======================================================   ============================================

Parent                                                                                        Summary

======================================================   ============================================
:ref:`droplet_particle_child <droplet_particle_child>`       'child_object_type' of droplet_particle.

======================================================   ============================================

