version/0.25/_sources/api/solver/_autosummary/settings/heat_of_pyrolysis.rst.txt
:orphan:

.. _heat_of_pyrolysis:

heat_of_pyrolysis
=================

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.heat_of_pyrolysis.heat_of_pyrolysis
    :show-inheritance:

.. rubric:: Attributes

=========================   ====================================================

Attribute                                                                Summary

=========================   ====================================================
:ref:`option <option_12>`       Select method for calculating material property.

:ref:`value <value_11>`                     Specify the constant property value.

=========================   ====================================================

.. rubric:: Included in:

======================================================   ============================================

Parent                                                                                        Summary

======================================================   ============================================
:ref:`droplet_particle_child <droplet_particle_child>`       'child_object_type' of droplet_particle.

:ref:`material_child <material_child_1>`                             'child_object_type' of material.

======================================================   ============================================

